[package]
name = "mftmx-marketplace"
description = "The mftmaketplace in terra network"
version = "0.1.0"
authors = ["coderighter2 <24811616+coderighter2@users.noreply.github.com>"]
edition = "2021"
license = "NFTmx"
repository = "https://github.com/NFTmx/MarketPlaceNFT_Terra.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = "0.16.5"
cosmwasm-storage = "0.16.5"
schemars = "0.8.1"
serde = { version = "1.0.125", default-features = false, features = ["derive"] }
hex = "0.4"
thiserror = "1.0.23"

[dev-dependencies]
cosmwasm-vm = "0.16.5"
cosmwasm-schema = "0.16.5"
