[package]
name = "mftmx-marketplace"
description = "The mftmaketplace in terra network"
version = "0.1.0"
authors = ["coderighter2 <24811616+coderighter2@users.noreply.github.com>"]
license = "NFTmx"
repository = "https://github.com/NFTmx/MarketPlaceNFT_Terra.git"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cw0 = { version = "0.9.0" } 
cw2 = { version = "0.9.0" } 
cw20 = { version = "0.9.0" } 
cw721 = { version = "0.9.0" } 
cosmwasm-std = { version = "0.16.0" }
cw-storage-plus = { version = "0.9.0" } 
integer-sqrt = "0.1.5"
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.20" }
protobuf = { version = "2", features = ["with-bytes"] }
[dev-dependencies]
cosmwasm-schema = "0.16.0"